@startuml

title __PC_EVENTS's Class Diagram__\n

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.AdrenalineUpEvent {
            - eventID : int
            + AdrenalineUpEvent()
            + hideSensibleContent()
            + toString()
            - AdrenalineUpEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.CollectEvent {
            - eventID : int
            + CollectEvent()
            + hideSensibleContent()
            + toString()
            - CollectEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.MovementEvent {
            - eventID : int
            - from : String
            - to : String
            + MovementEvent()
            + hideSensibleContent()
            + toString()
            - MovementEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PcColourChosenEvent {
            - eventID : int
            + PcColourChosenEvent()
            + hideSensibleContent()
            + toString()
            - PcColourChosenEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        abstract class common.events.pc_events.PcEvent {
            ~ censored : boolean
            + getDTO()
            {abstract} + hideSensibleContent()
            + isCensored()
            ~ PcEvent()
            ~ PcEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PowerUpDiscardedEvent {
            - eventID : int
            + PowerUpDiscardedEvent()
            + hideSensibleContent()
            + toString()
            - PowerUpDiscardedEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PowerUpDrownEvent {
            - eventID : int
            + PowerUpDrownEvent()
            + hideSensibleContent()
            + toString()
            - PowerUpDrownEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.SpawnEvent {
            - eventID : int
            + SpawnEvent()
            + hideSensibleContent()
            + toString()
            - SpawnEvent()
        }
      }
    }
  }
  

  common.events.pc_events.AdrenalineUpEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.CollectEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.MovementEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PcColourChosenEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PcEvent .up.|> common.events.ModelEvent
  common.events.pc_events.PcEvent o-- common.dto_model.PcDTO : pc
  common.events.pc_events.PowerUpDiscardedEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PowerUpDiscardedEvent o-- common.dto_model.PowerUpCardDTO : powerUp
  common.events.pc_events.PowerUpDrownEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PowerUpDrownEvent o-- common.dto_model.PowerUpCardDTO : powerUp1
  common.events.pc_events.PowerUpDrownEvent o-- common.dto_model.PowerUpCardDTO : powerUp2
  common.events.pc_events.SpawnEvent -up-|> common.events.pc_events.PcEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
